исправление недочетов